--- a/client/src/Styles/style.css
+++ b/client/src/Styles/style.css
@@ -7,13 +7,33 @@
     background-color: #f1f1f1;
   } */
 
-  .parent,.userCard,.transferForm{
+.parent,.userCard,.transferForm{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: #f1f1f1;
   }
+.transferHistoryCard{
+  padding: 0.3%;
+}
+.allBalancesDiv
+{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.cards
+{
+  display: flex;
+  padding: 1rem;
+}
  form{
     margin: auto;
 
@@ -82,4 +102,10 @@ input[type=text], input[type=password] ,input[type=number]{
   {
     padding-bottom: 10px;
     border-bottom: 1px solid #ddd;
+  }
+  .tHistoyTable
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
