--- a/client/src/Styles/style.css
+++ b/client/src/Styles/style.css
@@ -16,7 +16,7 @@
     background-color: #f1f1f1;
   }
 .transferHistoryCard{
-  padding: 0.3%;
+  padding: 3%;
 }
 .allBalancesDiv
 {
@@ -108,4 +108,14 @@ input[type=text], input[type=password] ,input[type=number]{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 2rem;
+    
+  }
+  .allUsersDiv
+  {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: aqua;
+    padding: 3%;
   }
